# cheese_route_bot

./: .dockerignore  .gitignore  API_docs.md  README.md  cheese_bot_erp.postman_collection.json  main.py  pyproject.toml
.github/workflows/: deploy.yml
chatbot/: deposit_reminder.py  lead_followup.py  main.py
chatbot/ai_agent/: __init__.py  agent.py  context.py  date_agent.py  demo_agent.py  dependencies.py  error_agent.py  instructions.py  lead_followup_agent.py  models.py  prompts.py  summary_agent.py  translation_agent.py
chatbot/ai_agent/tests/: conftest.py  test_add_activities_to_route.py  test_cancel_reservation.py  test_cancel_route_booking.py  test_catalog.py  test_customer.py  test_error_agent.py  test_get_cancellation_impact.py  test_itinerary.py  test_lead_followup.py  (+7 more)
chatbot/api/: chat_router.py  demo_router.py  erp_router.py  main.py  telegram_bot.py  whatsapp_router.py
chatbot/audio/: stt.py
chatbot/core/: config.py  logging_conf.py  sentry.py
chatbot/db/: schema.py  services.py
chatbot/erp/: __init__.py  auth.py  client.py  transcript.py
chatbot/messaging/: telegram_notifier.py  whatsapp.py
chatbot/reminders/: deposit_reminder.py  event_reminder.py  lead_followup.py  utils.py
docker/: Dockerfile  docker-compose.yml
docker/messaging/: telegram_notifier.py
scripts/: debug_erp_response.py  extract_pdf_receipt.py  migrate_deposit_reminders_add_columns.py  migrate_deposit_reminders_event_notified.py  migrate_messages_add_active.py  test_agent_repl.py  test_telegram_notifier.py  test_user_has_pending_deposit.py
static/: prompt.txt
(+22 files in other folders)
