[project]
name = "cheese-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "databases>=0.9.0",
    "fastapi>=0.135.1",
    "psycopg2>=2.9.11",
    "pydantic-ai>=1.63.0",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.47",
]
